--- a/diss.ipynb
+++ b/diss.ipynb
@@ -110,7 +110,8 @@
     "\n",
     "print(len(Trubetskoy_2022_broad_coding))\n",
     "\n",
-    "# Only do the coding ones, broad coding and prioritised coding. Compare both of them seperately with the 3 current data sets, to get two venn diagrams from them.\n",
+    "# Only do the coding ones, broad coding and prioritised coding. \n",
+    "# Compare both of them seperately with the 3 current data sets, to get two venn diagrams from them.\n",
     "# As soon as they are compared, find which pre,post will have more schizophrenia genes for it. Another set with in syn go and not in syn go. Another venn diagram with the database\n",
     "\n",
     "# Just join gene and disease\n",
@@ -148,12 +149,12 @@
    },
    "outputs": [],
    "source": [
-    "SELECT HumanEntrez,\n",
+    "SQL = \"\"\"SELECT HumanEntrez,\n",
     "HumanName,\n",
     "HDOID,\n",
     "Description\n",
     "FROM FullGeneFullDisease\n",
-    "WHERE HDOID = \"DOID:5419\" or HDOID = \"doid:1229\""
+    "WHERE HDOID = \"DOID:5419\" \"\"\""
    ]
   },
   {
@@ -164,13 +165,13 @@
    },
    "outputs": [],
    "source": [
-    "SELECT p.GeneID, l.Name AS Localisation, MGI, HumanEntrez, MouseEntrez, HumanName, MouseName, PaperPMID, a.Name AS Paper,\n",
+    "SQL = \"\"\" SELECT p.GeneID, l.Name AS Localisation, MGI, HumanEntrez, MouseEntrez, HumanName, MouseName, PaperPMID, a.Name AS Paper,\n",
     "a.Year AS Year, SpeciesTaxID, MethodID, b.Name AS BrainRegion, d.HDOID AS Disease\n",
     "FROM Gene g JOIN PaperGene p ON g.ID = p.GeneID\n",
     "JOIN Localisation l ON l.ID = p.LocalisationID\n",
     "JOIN Paper a ON a.PMID = p.PaperPMID\n",
     "JOIN BrainRegion b ON b.ID = p.BrainRegionID\n",
-    "JOIN DiseaseGene d ON g.ID = d.GeneID"
+    "JOIN DiseaseGene d ON g.ID = d.GeneID \"\"\""
    ]
   }
  ],
