--- a/diss.ipynb
+++ b/diss.ipynb
@@ -173,6 +173,89 @@
     "JOIN BrainRegion b ON b.ID = p.BrainRegionID\n",
     "JOIN DiseaseGene d ON g.ID = d.GeneID \"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   GeneID          MGI  HumanEntrez  MouseEntrez  RatEntrez HumanName  \\\n1       1  MGI:1277959       1742.0      13385.0    29495.0      DLG4   \n2       2    MGI:88256        815.0      12322.0    25400.0    CAMK2A   \n3       3    MGI:96568       9118.0     226180.0    24503.0       INA   \n4       4    MGI:98388       6711.0      20742.0   305614.0    SPTBN1   \n5       5    MGI:88257        816.0      12323.0    24245.0    CAMK2B   \n\n  MouseName RatName  Localisation  Npmid  \n1      Dlg4    Dlg4  Postsynaptic     29  \n2    Camk2a  Camk2a  Postsynaptic     28  \n3       Ina     Ina  Postsynaptic     26  \n4    Sptbn1  Sptbn1  Postsynaptic     25  \n5    Camk2b  Camk2b  Postsynaptic     26  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>GeneID</th>\n      <th>MGI</th>\n      <th>HumanEntrez</th>\n      <th>MouseEntrez</th>\n      <th>RatEntrez</th>\n      <th>HumanName</th>\n      <th>MouseName</th>\n      <th>RatName</th>\n      <th>Localisation</th>\n      <th>Npmid</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>MGI:1277959</td>\n      <td>1742.0</td>\n      <td>13385.0</td>\n      <td>29495.0</td>\n      <td>DLG4</td>\n      <td>Dlg4</td>\n      <td>Dlg4</td>\n      <td>Postsynaptic</td>\n      <td>29</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>MGI:88256</td>\n      <td>815.0</td>\n      <td>12322.0</td>\n      <td>25400.0</td>\n      <td>CAMK2A</td>\n      <td>Camk2a</td>\n      <td>Camk2a</td>\n      <td>Postsynaptic</td>\n      <td>28</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>MGI:96568</td>\n      <td>9118.0</td>\n      <td>226180.0</td>\n      <td>24503.0</td>\n      <td>INA</td>\n      <td>Ina</td>\n      <td>Ina</td>\n      <td>Postsynaptic</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>MGI:98388</td>\n      <td>6711.0</td>\n      <td>20742.0</td>\n      <td>305614.0</td>\n      <td>SPTBN1</td>\n      <td>Sptbn1</td>\n      <td>Sptbn1</td>\n      <td>Postsynaptic</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5</td>\n      <td>MGI:88257</td>\n      <td>816.0</td>\n      <td>12323.0</td>\n      <td>24245.0</td>\n      <td>CAMK2B</td>\n      <td>Camk2b</td>\n      <td>Camk2b</td>\n      <td>Postsynaptic</td>\n      <td>26</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Initialize lists\n",
+    "graphFile = []\n",
+    "trubetskoyBroad = []\n",
+    "trubetskoyBroadCross = []\n",
+    "result_list = []\n",
+    "\n",
+    "file_path = \"Files/Trubetskoy_2022_broad_coding.txt\"\n",
+    "with open(file_path, 'r') as file:\n",
+    "    next(file)\n",
+    "\n",
+    "    for line in file:\n",
+    "        try:\n",
+    "            value = int(line.split('\\t')[0])\n",
+    "            trubetskoyBroad.append(value)\n",
+    "        except (ValueError, IndexError):\n",
+    "            pass\n",
+    "\n",
+    "file_path = \"Files/Trubetskoy_broad_db_cross.txt\"\n",
+    "with open(file_path, 'r') as file:\n",
+    "    next(file)\n",
+    "\n",
+    "    for line in file:\n",
+    "        try:\n",
+    "            value = int(line.split('\\t')[0])\n",
+    "            trubetskoyBroadCross.append(value)\n",
+    "        except (ValueError, IndexError):\n",
+    "            pass\n",
+    "\n",
+    "file_path = \"PostsynapticNetwork/FullPSDDBNetwork.gml\"\n",
+    "with open(file_path, 'r') as file:\n",
+    "    for line in file:\n",
+    "        if 'name' in line:\n",
+    "            try:\n",
+    "                value = int(line.split('\"')[1])\n",
+    "                graphFile.append(value)\n",
+    "            except (ValueError, IndexError):\n",
+    "                pass\n",
+    "\n",
+    "file_path = \"Files/geneTable.txt\"\n",
+    "geneTable = pd.read_csv(file_path, sep=' ')\n",
+    "\n",
+    "geneTable.head()\n",
+    "\n",
+    "# entrezGeneTableList = geneTable[\"\"].tolist()\n",
+    "# \n",
+    "# missingFromGraph = [item for item in entrezGeneTableList if item not in graphFile]\n",
+    "# #\n",
+    "# print(len(missingFromGraph))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T12:21:53.396488Z",
+     "start_time": "2023-12-01T12:21:53.197020Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
