--- a/diss.ipynb
+++ b/diss.ipynb
@@ -252,9 +252,40 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "\n",
+    "x= [817,\n",
+    "    30,\n",
+    "    280,\n",
+    "    14,\n",
+    "    39,\n",
+    "    47,\n",
+    "    118,\n",
+    "    99]\n",
+    "\n",
+    "y = [0.216,\n",
+    "     0.411,\n",
+    "     0.323,\n",
+    "     0.501,\n",
+    "     0.418,\n",
+    "     0.506,\n",
+    "     0.481,\n",
+    "     0.483,]\n",
+    "\n",
+    "plt.plot(x, y, marker='o', linestyle='-')\n",
+    "plt.title(\"Average p-val vs no. communties\")\n",
+    "plt.xlabel(\"No. Communities\")\n",
+    "plt.ylabel(\"Average p-value\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   }
  ],
