--- a/diss.ipynb
+++ b/diss.ipynb
@@ -27,28 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: biopython in ./venv/lib/python3.9/site-packages (1.81)\r\n",
-      "Requirement already satisfied: numpy in ./venv/lib/python3.9/site-packages (from biopython) (1.26.1)\r\n",
-      "\u001B[33mWARNING: You are using pip version 21.3.1; however, version 23.3.1 is available.\r\n",
-      "You should consider upgrading via the '/Users/nicoleferguson/Documents/Dissertation/venv/bin/python -m pip install --upgrade pip' command.\u001B[0m\r\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: PrettyTable in ./venv/lib/python3.9/site-packages (3.9.0)\r\n",
-      "Requirement already satisfied: wcwidth in ./venv/lib/python3.9/site-packages (from PrettyTable) (0.2.8)\r\n",
-      "\u001B[33mWARNING: You are using pip version 21.3.1; however, version 23.3.1 is available.\r\n",
-      "You should consider upgrading via the '/Users/nicoleferguson/Documents/Dissertation/venv/bin/python -m pip install --upgrade pip' command.\u001B[0m\r\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the Biopython functions we need.\n",
     "# Remember that you can look up BioPython functions here - https://biopython.org/docs/latest/api/Bio.html\n",
